objects/Kontrola__c/Kontrola__c.object-meta.xml
<CustomObject>
    <description>Výsledek kontroly objektu, zařazeného pod účast.</description>
    <label>Kontrola</label>
    <nameField>
        <displayFormat>KONTROLA-{YY}-{0000}</displayFormat>
        <label>ID kontroly objektu CV</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kontroly</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>