objects/Kontrola__c/fields/Certifikace_zaplacena_do__c.field-meta.xml
<CustomField>
    <fullName>Certifikace_zaplacena_do__c</fullName>
    <formula>Ucast__r.Zaplacene_obdobi_smlouvy_o_certifikaci__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certifikace zaplacena do</label>
    <type>Date</type>
</CustomField>