objects/Kontrola__c/fields/Datum_kontroly__c.field-meta.xml
<CustomField>
    <fullName>Datum_kontroly__c</fullName>
    <label>Datum kontroly</label>
    <required>true</required>
    <type>Date</type>
</CustomField>