objects/Kontrola__c/fields/Datum_podpisu_posledni_smlouvy__c.field-meta.xml
<CustomField>
    <fullName>Datum_podpisu_posledni_smlouvy__c</fullName>
    <formula>Ucast__r.Datum_podpisu_smlouvy_o_certifikaci_CV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Datum podpisu smlouvy o certifikaci CV</label>
    <type>Date</type>
</CustomField>