objects/Kontrola__c/fields/Hodnotitel_objektu__c.field-meta.xml
<CustomField>
    <fullName>Hodnotitel_objektu__c</fullName>
    <inlineHelpText>Který hodnotitel objekt kontroloval?</inlineHelpText>
    <label>Hodnotitel objektu</label>
    <referenceTo>Hodnotitel__c</referenceTo>
    <relationshipLabel>Kontroly</relationshipLabel>
    <relationshipName>Kontroly_CV</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>