objects/Kontrola__c/fields/Narok_na_odmenu__c.field-meta.xml
<CustomField>
    <fullName>Narok_na_odmenu__c</fullName>
    <formula>IF ( TEXT(Vysledek_kontroly__c) = &quot;&quot;, &quot;Ne&quot;,

IF (  Ucast__r.Zaplacene_obdobi_smlouvy_o_certifikaci__c &gt;=  Datum_kontroly__c , &quot;Ano&quot;, &quot;Ne&quot;)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nárok na odměnu</label>
    <type>Text</type>
</CustomField>