objects/Kontrola__c/fields/Narok_na_odmenu_od__c.field-meta.xml
<CustomField>
    <fullName>Narok_na_odmenu_od__c</fullName>
    <formula>IF ( TEXT(Vysledek_kontroly__c) = &quot;&quot;, null, 

IF (Ucast__r.Zaplacene_obdobi_smlouvy_o_certifikaci__c &gt;=  Datum_kontroly__c, Datum_kontroly__c, null)

)</formula>
    <label>Nárok na odměnu od</label>
    <type>Date</type>
</CustomField>