objects/Kontrola__c/fields/Objekt__c.field-meta.xml
<CustomField>
    <fullName>Objekt__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Objekt</label>
    <type>Text</type>
</CustomField>