objects/Kontrola__c/fields/Odmena_proplacena__c.field-meta.xml
<CustomField>
    <fullName>Odmena_proplacena__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Odměna proplacena (zastarale)</label>
    <type>Checkbox</type>
</CustomField>