objects/Kontrola__c/fields/Odmena_vyplacena__c.field-meta.xml
<CustomField>
    <fullName>Odmena_vyplacena__c</fullName>
    <description>Dle data posledních vyplacených odměn u hodnotitele určuje, zda byla odměna již vyplacena hodnotiteli.</description>
    <formula>IF( Odmena_proplacena__c, &quot;Ano&quot;,

IF( Narok_na_odmenu_od__c  &lt; Hodnotitel_objektu__r.Datum_posledniho_vyplaceni_odmen__c, &quot;Ano&quot;, &quot;Ne&quot;)

)</formula>
    <inlineHelpText>Dle data posledních vyplacených odměn u hodnotitele určuje, zda byla odměna již vyplacena hodnotiteli.</inlineHelpText>
    <label>Odměna vyplacena</label>
    <type>Text</type>
</CustomField>