objects/Kontrola__c/fields/Popis_prubehu__c.field-meta.xml
<CustomField>
    <fullName>Popis_prubehu__c</fullName>
    <inlineHelpText>Prosím, zadejte informace  o průběhu kontroly. V případě negativního výsledku kontroly doplňte informace o tom, proč.</inlineHelpText>
    <label>Popis průběhu</label>
    <type>TextArea</type>
</CustomField>