objects/Kontrola__c/fields/result_aggregator__c.field-meta.xml
<CustomField>
    <fullName>result_aggregator__c</fullName>
    <formula>(
YEAR( Datum_kontroly__c )*10000
+
MONTH(Datum_kontroly__c)*100
+
DAY(Datum_kontroly__c)
) * 1000

+

IF(ISPICKVAL( Vysledek_kontroly__c , &quot;OK&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_result_aggregator</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>