objects/Kontrola__c/fields/Ucast__c.field-meta.xml
<CustomField>
    <fullName>Ucast__c</fullName>
    <label>Účast</label>
    <referenceTo>Ucast__c</referenceTo>
    <relationshipLabel>Kontroly</relationshipLabel>
    <relationshipName>Kontroly</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>