objects/Kontrola__c/fields/Vyse_odmeny_manual__c.field-meta.xml
<CustomField>
    <fullName>Vyse_odmeny_manual__c</fullName>
    <label>Výše odměny</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>