objects/Kontrola__c/fields/Vysledek_kontroly__c.field-meta.xml
<CustomField>
    <fullName>Vysledek_kontroly__c</fullName>
    <label>Výsledek kontroly</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>Negativní</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>